--- a/The-Celestial-Curia.tex
+++ b/The-Celestial-Curia.tex
@@ -105,6 +105,22 @@
 
 
 \makeatletter
+\@ifpackageloaded{tcolorbox}{}{\usepackage[skins,breakable]{tcolorbox}}
+\@ifpackageloaded{fontawesome5}{}{\usepackage{fontawesome5}}
+\definecolor{quarto-callout-color}{HTML}{909090}
+\definecolor{quarto-callout-note-color}{HTML}{0758E5}
+\definecolor{quarto-callout-important-color}{HTML}{CC1914}
+\definecolor{quarto-callout-warning-color}{HTML}{EB9113}
+\definecolor{quarto-callout-tip-color}{HTML}{00A047}
+\definecolor{quarto-callout-caution-color}{HTML}{FC5300}
+\definecolor{quarto-callout-color-frame}{HTML}{acacac}
+\definecolor{quarto-callout-note-color-frame}{HTML}{4582ec}
+\definecolor{quarto-callout-important-color-frame}{HTML}{d9534f}
+\definecolor{quarto-callout-warning-color-frame}{HTML}{f0ad4e}
+\definecolor{quarto-callout-tip-color-frame}{HTML}{02b875}
+\definecolor{quarto-callout-caution-color-frame}{HTML}{fd7e14}
+\makeatother
+\makeatletter
 \@ifpackageloaded{bookmark}{}{\usepackage{bookmark}}
 \makeatother
 \makeatletter
@@ -153,7 +169,7 @@
 \urlstyle{same}
 \hypersetup{
   pdftitle={The Celestial Curia},
-  pdfauthor={Celestial Curia Research Group},
+  pdfauthor={Andrew Darcy},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 
@@ -166,8 +182,8 @@
 }
 \makeatother
 \subtitle{The Master Book of Traditional Astrology}
-\author{Celestial Curia Research Group}
-\date{2025-12-28}
+\author{Andrew Darcy}
+\date{2025-12-29}
 \begin{document}
 \frontmatter
 \maketitle
@@ -186,6 +202,16 @@
 
 \markboth{Preface}{Preface}
 
+\begin{tcolorbox}[enhanced jigsaw, breakable, leftrule=.75mm, opacityback=0, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{A Note on Methodology}, bottomrule=.15mm, toprule=.15mm, colbacktitle=quarto-callout-note-color!10!white, bottomtitle=1mm, opacitybacktitle=0.6, colframe=quarto-callout-note-color-frame, colback=white, toptitle=1mm, titlerule=0mm, arc=.35mm, rightrule=.15mm, coltitle=black, left=2mm]
+
+This work was researched and compiled with the assistance of artificial
+intelligence tools. AI was used to help synthesize classical
+astrological sources, organize reference material, and structure the
+comprehensive tables contained herein. All content has been reviewed and
+curated by the author.
+
+\end{tcolorbox}
+
 The documents assembled herein represent a comprehensive synthesis of
 pre-1700 astrological tradition, reconstructed for the modern
 practitioner. This work moves beyond surface-level descriptions to
@@ -200,7 +226,7 @@ and a psychological mirror. This Master Book aims to deconstruct the
 four millennia, reframing the planets not merely as symbols, but as
 active ``Ministers'' in a Celestial Court.
 
-\textbf{The Celestial Curia Research Group}
+\textbf{Andrew Darcy}
 
 \bookmarksetup{startatroot}
 
